--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,18 +9,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: test
-        uses: actions/setup-node@v3
+      - uses: actions/setup-node@v3
+        name: install
         with:
           node-version: 20.x
           cache: "npm"
       - run: npm ci
-      - run: pre-commit run --all-files
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    permissions:
-      contents: read
-    steps:
-      - name: deploy
-        uses: actions/deploy-pages@v2
+      - uses: pre-commit/action@v3.0.1
+      - uses: pre-commit-ci/lite-action@v1.0.2
+        if: always()
